quick extra fix for unvisited link color readability in game page css

--- a/css/game_page.css
+++ b/css/game_page.css
@@ -1,4 +1,4 @@
-a {
+a, a:default, a:enabled, a:link {
   color: rgb(150, 150, 240);
 }
 
